# SidekickPdfExporter

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sidekickpdfexporter/: browser.py  cli.py  exporter.py  scroller.py  utils.py
